src/main/resources/gui/theme/common/jams_editor.css
/*
 *  MIT License
 *
 *  Copyright (c) 2021 Gael Rial Costas
 *
 *  Permission is hereby granted, free of charge, to any person obtaining a copy
 *  of this software and associated documentation files (the "Software"), to deal
 *  in the Software without restriction, including without limitation the rights
 *  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 *  copies of the Software, and to permit persons to whom the Software is
 *  furnished to do so, subject to the following conditions:
 *
 *  The above copyright notice and this permission notice shall be included in all
 *  copies or substantial portions of the Software.
 *
 *  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 *  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 *  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 *  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 *  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 *  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 *  SOFTWARE.
 */

/*

    JAMS EDITOR STYLE

    This CSS file contains all style information about JAMS's file editor.

*/


/* FILE DISPLAY LIST */
.file-editor-list {
    -fx-background-color: -theme-background-darkest;
}

.file-editor-list .tab-header-area .tab-header-background {
    -fx-background-color: -theme-background;
}

.file-editor-list .tab-header-area .tab:selected {
    -fx-background-color: -theme-background-lighter;
    -fx-border-color: -theme-background-lighter -theme-background-lighter -theme-background-pressed -theme-background-lighter;
}

.draggable-file-editor-list:hover {
    -fx-background-color: -theme-header;
}

.draggable-file-editor-list .tab-header-area .tab-header-background:hover {
    -fx-background-color: -theme-header;
}

/* WINDOW POPUPS */
.window-popup-background {
    -fx-border-color: -theme-background-lighter;
    -fx-border-width: 1px;
}

/* CODE AREA */
.code-area {
    -fx-background-color: -theme-background-darkest;
    -fx-text-fill: -theme-foreground;
}

.code-area .scroll-pane {
    -fx-background-color: -theme-background-darkest;
}

.caret {
    -fx-stroke: -theme-foreground;
}

.paragraph-box:has-caret {
    -fx-background-color: -theme-background-darker;
}

/*Default text*/
.styled-text-area .text {
    -fx-fill: -theme-foreground;
    -fx-font-family: "{FONT_CODE}";
    -fx-font-size: 13.5;
}

.code-area .paragraph-text {
    -fx-padding: 0px 0px 0px 5px;
}

.code-area .selection {
    -fx-fill: -theme-text-selected;
}


/* NUMBER LINE */
.code-area .left-bar {
    -fx-background-color: -theme-background-darker;
}

.code-area .left-bar-background {
    -fx-fill: -theme-background-darker;
}

.code-area .left-bar .line-number {
    -fx-background-color: transparent;
}

.code-area .left-bar .line-number .text {
    -fx-fill: -theme-foreground-darker-2;
    -fx-font-family: "{FONT_CODE}";
    -fx-font-size: 12px;
}

.paragraph-box:has-caret .left-bar .line-number .text {
    -fx-fill: -theme-foreground;
}

/* AUTOCOMPLETION */
.autocompletion-popup {
    -fx-background-color: -theme-background;
    -fx-border-color: -theme-background-darker-2;
    -fx-border-width: 1px;
}

.autocompletion-popup-element .label {
    -fx-padding: 0px 5px 0px 5px;
    -fx-font-family: "{FONT_CODE}";
    -fx-font-size: 13.5;
}

.autocompletion-popup-element-selected {
    -fx-background-color: -theme-element-selected;
}

/* MIPS DOCUMENTATION */

.documentation-top-message * {
    -fx-background-color: -theme-background-lighter;
    -fx-padding: 8px 0px 5px 10px;
}

.documentation * {
    -fx-background-color: -theme-background-darker;
    -fx-padding: 8px 0px 5px 10px;
}

.documentation .text {
    -fx-font-family: "{FONT_GENERAL}";
}

.documentation .code {
    -fx-font-family: "{FONT_CODE}";
    -fx-font-size: 14.5;
}

.documentation .bold {
    -fx-font-weight: bold;
}

.documentation .underline {
    -rtfx-underline-color: -theme-foreground;
    -rtfx-underline-width: 1px
}

.documentation .italic {
    -fx-font-style: italic;
}

.documentation .sub {
    -fx-font-size: 9px;
}

.documentation .black {
    -fx-fill: -theme-foreground-darker;
    -fx-font-weight: bolder;
}

/* HINT BAR */
.hint-bar-error {
    -fx-fill: -theme-error;
}

.hint-bar-warning {
    -fx-fill: -theme-warining;
}

.hint-bar-info {
    -fx-fill: -theme-done;
}

/* SEARCH */
.code-area .search-result {
    -rtfx-background-color: -theme-search-result;
    -rtfx-border-stroke-color: -theme-search-result-stroke;
    -rtfx-border-stroke-width: 1px;
}

.code-area .selected-search-result {
    -rtfx-background-color: -theme-selected-search-result;
    -rtfx-border-stroke-color: -theme-selected-search-result-stroke;
    -rtfx-border-stroke-width: 1px;
}

/* LOG */
.code-area .log_error {
    -fx-fill: -theme-error;
}

.code-area .log_info {
    -fx-fill: -theme-info;
}

.code-area .log_warning {
    -fx-fill: -theme-warining;
}

.code-area .log_done {
    -fx-fill: -theme-done;
}

/* ELEMENTS */
.code-area .comment {
    -fx-fill: -theme-text-comment;
}

/* called normal-label instead of label to avoid conflicts with the menu's labels */
.code-area .normal-label {
    -fx-fill: -theme-text-label;
    -fx-font-style: italic;
}

.code-area .global-label {
    -fx-fill: -theme-text-global-label;
    -fx-font-style: italic;
}

.code-area .directive {
    -fx-fill: -theme-text-directive;
}

.code-area .directive-parameter {
    -fx-fill: -theme-text-directive-parameter;
}

.code-area .directive-parameter-string {
    -fx-fill: -theme-text-string;
}

.code-area .instruction {
    -fx-fill: -theme-text-instruction;
}

.code-area .pseudo-instruction {
    -rtfx-underline-color: -theme-text-pseudo-instruction;
    -rtfx-underline-width: 1px;
}

.code-area .instruction-parameter-label {
    -fx-fill: -theme-text-label;
    -fx-font-style: italic;
}

.code-area .instruction-parameter-global-label {
    -fx-fill: -theme-text-global-label;
    -fx-font-style: italic;
}

.code-area .instruction-parameter-register {
    -fx-fill: -theme-text-register;
}

.code-area .instruction-parameter-immediate {
    -fx-fill: -theme-text-immediate;
}

.code-area .instruction-parameter-string {
    -fx-fill: -theme-text-string;
}

.code-area .macro-call {
    -fx-fill: -theme-text-macro;
}

.code-area .macro-call-parameter {
    -fx-fill: -theme-text-macro-parameter;
}

.code-area .warning {
    -rtfx-underline-color: -theme-warining;
    -rtfx-underline-width: 1px;
}

.code-area .error {
    -rtfx-underline-color: -theme-error;
    -rtfx-underline-width: 1px;
}

/* SEARCH AREA */
.code-file-editor-search {
    -fx-pref-height: 30px;
    -fx-background-color: -theme-background-darker-2;
}

.code-file-editor-search-text-field {
    -fx-pref-width: 200px;
}

.code-file-editor-search-button {
    -fx-background-color: -theme-background-darker-2;
    -fx-border-color: transparent;
    -fx-font-weight: bold;
}

.code-file-editor-search-results {
    -fx-font-size: 12px;
}

/* MIPS POPUPS*/
.mips-popup {
    -fx-background-color: -theme-background-lighter;
    -fx-padding: 5px 5px 5px 5px;
    -fx-border-color: -theme-background-lighter;
    -fx-border-width: 1px;
}

.mips-popup .label {
    -fx-font-size: 12.5;
}

